[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_texture_rect.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_texture_link.gd" type="Script" id=2]

[node name="ScaffolderTextureLink" type="LinkButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -754.0
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
underline = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScaffolderTextureRect" parent="." instance=ExtResource( 1 )]
mouse_filter = 1

[connection signal="pressed" from="." to="." method="_on_ScaffolderTextureLink_pressed"]
